# SciAI

./: README.md  main.py  pyproject.toml  report_example.txt  requirements.txt
