[project]
name = "r-d-agent-autonomous"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "groq>=0.26.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-groq>=0.3.2",
    "langgraph>=0.4.7",
    "pymupdf>=1.26.0",
    "python-dotenv>=1.1.0",
    "semanticscholar>=0.10.0",
    "streamlit>=1.45.1",
]
